[gd_scene load_steps=10 format=3 uid="uid://bwa3uhbqwok57"]

[ext_resource type="Script" path="res://Scripts/Gui.gd" id="1_5gckj"]
[ext_resource type="Texture2D" uid="uid://2hsv3yo3g2q8" path="res://Assets/UI/Barre.png" id="2_hrwpl"]
[ext_resource type="Texture2D" uid="uid://c7xmi63cdg3si" path="res://Assets/UI/Icon_None.png" id="3_034ej"]
[ext_resource type="Texture2D" uid="uid://b47lk01dxravm" path="res://Assets/placeholder/meme_crocs.png" id="4_m8rda"]
[ext_resource type="Script" path="res://Scenes/UI/AnimatedMeme.gd" id="5_7o2po"]
[ext_resource type="Texture2D" uid="uid://c6blg7fdj8ltw" path="res://Assets/placeholder/meme_fleur.jpg" id="6_ndsni"]
[ext_resource type="Texture2D" uid="uid://c1wvisdg53ax1" path="res://Assets/placeholder/meme_tourne_disque.png" id="7_c13ox"]
[ext_resource type="AudioStream" uid="uid://cmndok5vhkoeu" path="res://Assets/Sound/button_click_canceled-001.wav" id="8_if1yi"]
[ext_resource type="AudioStream" uid="uid://cjvksfsr2lueg" path="res://Assets/Sound/click_efleurement_menu_1.wav" id="9_hs6ng"]

[node name="GUI" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5gckj")

[node name="Cases" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1301.0
offset_top = 881.0
offset_right = 1429.0
offset_bottom = 447.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_hrwpl")

[node name="icon1" type="TextureRect" parent="Cases"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.345
anchor_bottom = 1.0
offset_left = 377.0
offset_top = 153.0
offset_right = 1937.44
offset_bottom = 1840.0
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_034ej")
stretch_mode = 5

[node name="icon2" type="TextureRect" parent="Cases"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.335
anchor_right = 0.666
anchor_bottom = 1.0
offset_left = 103.92
offset_top = 140.0
offset_right = 2270.03
offset_bottom = 2072.0
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_034ej")
stretch_mode = 5

[node name="icon3" type="TextureRect" parent="Cases"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.66
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.6799
offset_top = 143.333
offset_right = 1336.0
offset_bottom = 1964.33
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_034ej")
stretch_mode = 5

[node name="CrocsCat" type="Sprite2D" parent="."]
position = Vector2(886, 1500)
scale = Vector2(1.3, 1.3)
texture = ExtResource("4_m8rda")
script = ExtResource("5_7o2po")
pos_out_of_screen = 1500
pos_middle = 700

[node name="FleurCat" type="Sprite2D" parent="."]
position = Vector2(886, 1400)
scale = Vector2(1.7, 1.7)
texture = ExtResource("6_ndsni")
script = ExtResource("5_7o2po")
pos_middle = 500

[node name="TourneDisqueCat" type="Sprite2D" parent="."]
position = Vector2(886, 1300)
scale = Vector2(2.5, 2.5)
texture = ExtResource("7_c13ox")
script = ExtResource("5_7o2po")
pos_out_of_screen = 1300
pos_middle = 500

[node name="WrongSong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_if1yi")

[node name="Clic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_hs6ng")
volume_db = 6.0
